# OrbisX-morgendagens-vaerktoej

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md
api/: Dockerfile  pyproject.toml
api/app/: main.py
api/app/core/: config.py  db.py  deps.py  redis_cache.py  security.py
api/app/models/: __init__.py
api/app/routes/: auth.py  entities.py  platform.py  search.py  share.py  sync.py
api/app/services/: ave.py
api/app/sources/: orbisx.py
docs/: IOS-APP-PLAN.md  NEXT-SESSION.md
infra/: Caddyfile.prod  docker-compose.prod.yml  docker-compose.yml
reference-dashboard/: Dockerfile.prod  astro.config.mjs  nginx.conf  package.json  tailwind.config.mjs
reference-dashboard/src/components/: ApiStatus.tsx  AuthForm.tsx  BrandCompare.tsx  BrandOverview.tsx  EmbedAve.tsx  ReportForm.tsx  SearchDemo.tsx  SharedReportView.tsx  SponsorshipReport.tsx  ThemeToggle.tsx  TrendingWidget.tsx  VolumeSparkline.tsx  Workspace.tsx
reference-dashboard/src/lib/: auth.ts
reference-dashboard/src/pages/: embed.astro  index.astro  login.astro  report.astro  shared.astro  signup.astro  workspace.astro
reference-dashboard/src/styles/: global.css  print.css
shared/openapi/: orbisx-v2.json
